--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/GUI-LifeExpectancy.csproj
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/GUI-LifeExpectancy.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Windows.Controls.DataVisualization.Toolkit">
       <HintPath>..\packages\WPFToolkit.DataVisualization.3.5.50211.1\lib\System.Windows.Controls.DataVisualization.Toolkit.dll</HintPath>
     </Reference>
@@ -45,6 +46,8 @@
     <Reference Include="System.Windows.Controls.Layout.Toolkit">
       <HintPath>..\packages\WPFToolkit.3.5.50211.1\lib\System.Windows.Controls.Layout.Toolkit.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -107,6 +110,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Charts-LifeExpectancy\Charts-LifeExpectancy\Charts-LifeExpectancy.csproj">
+      <Project>{d15f3ca3-2004-4b9e-87ab-35263b7e2e55}</Project>
+      <Name>Charts-LifeExpectancy</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\LifeExpectancy\LifeExpectancy\LifeExpectancy.csproj">
       <Project>{e8998571-af7b-4332-9526-53095fa7a72f}</Project>
       <Name>LifeExpectancy</Name>
