--- a/Charts-LifeExpectancy/Charts-LifeExpectancy/Charts-LifeExpectancy.csproj
+++ b/Charts-LifeExpectancy/Charts-LifeExpectancy/Charts-LifeExpectancy.csproj
@@ -97,6 +97,16 @@
       <Name>LifeExpectancy</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="background2.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="flag1.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
